spec/.test/config/invalid/isect/aliases/tags.php
<?php

return [
    'aliases' => [
        'id' => 'alias',
    ],
    'tags' => [
        'id' => [
            'id1' => [],
        ],
    ],
];
